master - code changes for adding other modules

--- a/src/app/associated-individuals/associated-individuals.component.scss
+++ b/src/app/associated-individuals/associated-individuals.component.scss
@@ -3,3 +3,20 @@
     padding-right: 20px;
     padding-left: 5px;
 }
+
+.companyOfficersContainer
+{
+    background-color: #6c757d;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-bottom: 25px;
+    color: #ffff;
+
+}
+
+.titleContainer
+{
+    display: block;
+    padding-left: 15px;
+
+}
