--- a/src/app/corporate-account-details/corporate-account-details.component.scss
+++ b/src/app/corporate-account-details/corporate-account-details.component.scss
@@ -1,6 +1,6 @@
 .corporateDetailsContainer
 {   
-    background: #efeff5;
+    background:#f8f9fa;
     padding: 20px;
     border: 1px solid #ced4da;
 }
