--- a/src/app/associated-individuals/associated-individuals.component.html
+++ b/src/app/associated-individuals/associated-individuals.component.html
@@ -1,10 +1,10 @@
-<div class="container">
+<div class="container" [ngClass]="{'companyOfficersContainer': selectedAccountType === 'companyOfficers'}">
   <div class="row">
     <!-- RADIO BUTTONS -->
     <div class="form-group">
-        <span *ngFor="let title of titles">           
+        <span *ngFor="let title of titles; let j=index;" [ngClass]="{'titleContainer': selectedAccountType === 'companyOfficers'}">           
             <span>
-                <input type="radio" name="radiogroup" 
+                <input type="radio" name="{{selectedAccountType}}_radiogroup_{{index}}_j" 
                     [checked]="idx === 0" 
                     [value]="title.id" 
                     (change)="onSelectionChange(title)">
@@ -15,22 +15,22 @@
 
   </div>
   <div class="row">
-    <div class="col-sm-4 form-group">
-      <label for="firstName">First Name</label>
+    <div [ngClass]="selectedAccountType === 'companyOfficers' ? 'col-sm-6' : 'col-sm-4'" class="form-group">
+      <label for="{{selectedAccountType}}_firstName_{{index}}">First Name</label>
       <div>
-        <input name="firstName" id="firstName" type="text" class="form-control" placeholder="First Name" required ngModel>
+        <input name="{{selectedAccountType}}_firstName_{{index}}" id="{{selectedAccountType}}_firstName_{{index}}" type="text" class="form-control" placeholder="First Name" required ngModel>
       </div>
     </div>
-    <div class="col-sm-4 form-group">
-      <label for="lastName">Last Name</label>
+    <div [ngClass]="selectedAccountType === 'companyOfficers'? 'col-sm-6' : 'col-sm-4'" class="form-group">
+      <label for="{{selectedAccountType}}_lastName_{{index}}">Last Name</label>
       <div>
-        <input name="lastName" id="lastName" type="text" class="form-control" placeholder="Last Name" required ngModel>
+        <input name="{{selectedAccountType}}_lastName_{{index}}" id="{{selectedAccountType}}_lastName_{{index}}" type="text" class="form-control" placeholder="Last Name" required ngModel>
       </div>
     </div>
-    <div class="col-sm-4 form-group">
-      <label for="dob">Date Of Birth</label>
+    <div *ngIf="selectedAccountType !== 'companyOfficers'" class="col-sm-4 form-group">
+      <label for="{{selectedAccountType}}_dob_{{index}}">Date Of Birth</label>
       <div>
-        <input name="dob" id="dob" type="date" class="form-control" placeholder="Date Of Birth" required ngModel></div>
+        <input name="{{selectedAccountType}}_dob_{{index}}" id="{{selectedAccountType}}_dob_{{index}}" type="date" class="form-control" placeholder="Date Of Birth" required ngModel></div>
     </div>
   </div>
 </div>
