--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
     {{ title }}
   </h1>
  </div>
-<IPS-registration-details></IPS-registration-details>
+ <div class="container">
+    <IPS-registration-details></IPS-registration-details>
+ </div>
 <router-outlet></router-outlet>
