--- a/src/app/registration-details/registration-details.component.html
+++ b/src/app/registration-details/registration-details.component.html
@@ -1,26 +1,4 @@
 <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
-  <!-- <div formGroupName="userData">
-    <div class="form-group">
-      <label for="username">UserName</label>
-      <input type="text" class="form-control" id="username" formControlName="username">
-      <span class="help-block"
-        *ngIf="!registrationForm.get('userData.username').valid&&registrationForm.get('userData.username').touched">
-        <span *ngIf="registrationForm.get('userData.username').errors['nameIsForbidden']">name is invalid</span>
-        <span *ngIf="registrationForm.get('userData.username').errors['required']">field is required</span>
-      </span>
-    </div>
-
-
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input type="email" class="form-control" id="email" formControlName="email">
-
-      <span class="help-block"
-        *ngIf="!registrationForm.get('userData.email').valid && registrationForm.get('userData.email').touched">
-        please enter a valid email id
-      </span>
-    </div>
-  </div> -->
   <div class="row">
     <div class=" col-sm-6 form-group">
       <label class="control-label" [ngClass]="{'required': registrationForm.get('accountType').pristine}"
@@ -37,40 +15,23 @@
       </select>
     </div>
   </div>
-  <div *ngIf="displayAssociatedIndividuals()" >
-      <!-- <IPS-associated-individuals [ageForm]="registrationForm"></IPS-associated-individuals> -->{{registrationForm.get('availableAssociatedAccounts')}}
-       <ng-container class="form-group" *ngFor="let accounts of registrationForm.get('availableAssociatedAccounts');let i = index">
-          <IPS-associated-individuals [ageForm]="registrationForm"   [index]="i" [selectedAccountType]="selectedAccountType"></IPS-associated-individuals>
-      </ng-container> 
-  </div>
 
-  <div *ngIf="displayPersonalAccountDetails()"> {{selectedindividualCount}}
+  <input type="date" formControlName="effectiveEndDate" style="display:none">
+   <span *ngIf="registrationForm.get('effectiveEndDate').errors?.inValidAge">field is
+      required</span> 
+
+      <div *ngIf="displayAssociatedIndividuals()" >
+          <div *ngFor="let detail of details; let i = index;">
+              <IPS-associated-individuals [form]="registrationForm" [selectedAccountType]="registrationForm.get('accountType').value"
+                 [detail]="detail" [detailIndex]="i"  *ngIf="i<selectedAssociateCount"></IPS-associated-individuals>
+          </div>
+        </div>
+  <div *ngIf="displayPersonalAccountDetails()"> 
       <IPS-personal-account-details [personAccountForm]="registrationForm"></IPS-personal-account-details>
     </div>
-    <div *ngIf="displayCorporateAccountDetails()"> {{selectedindividualCount}}
-        <IPS-corporate-account-details [corporateAccountForm]="registrationForm"></IPS-corporate-account-details>
+    <div *ngIf="displayCorporateAccountDetails()"> 
+      <IPS-corporate-accounts-details [completeData]="details"  [corporateAccountForm]="registrationForm"></IPS-corporate-accounts-details>
       </div>
-
-
-
-
-
-
-
-  <div class="radio" *ngFor="let gender of genders">
-    <label>
-      <input type="radio" [value]="gender" formControlName="gender">{{gender}}
-    </label>
-  </div>
-
-  <!-- <div formArrayName="hobbies">
-    <h4>Hobbies</h4>
-    <button class="btn btn-default" type="button" (click)="onAddHobby()">Add Hobby</button>
-{{registrationForm.get('hobbies').controls}}
-    <div class="form-group" *ngFor="let hobbyControl of registrationForm.get('hobbies').controls; let i=index">
-      <input type="text" class="form-control" [formControlName]="i">
-    </div>
-  </div> -->
 
   <span class="help-block" *ngIf="!registrationForm.valid && registrationForm.touched">
     please enter valid data
@@ -79,5 +40,5 @@
   <button class="btn btn-primary" type="submit">Submit</button>
 </form>
 
-{{registrationForm.value | json}}
+{{registrationForm.value |json}}
 {{registrationForm.valid}}
